# pycun-22

./: README.md
Introduccion-a-gRPC-con-Python/gRPC-demo/: README.md  docker-compose.yml
Introduccion-a-gRPC-con-Python/gRPC-demo/backend/: Dockerfile  entrypoint.sh  pyproject.toml
Introduccion-a-gRPC-con-Python/gRPC-demo/backend/src/core/: settings.py  urls.py
Introduccion-a-gRPC-con-Python/gRPC-demo/frontend/: Dockerfile
Introduccion-a-gRPC-con-Python/gRPC-demo/services/ecommerce/: README.md  entrypoint.sh  pyproject.toml
Introduccion-a-gRPC-con-Python/gRPC-demo/services/ecommerce/src/apps/account/: apps.py  serializers.py  views.py
Introduccion-a-gRPC-con-Python/gRPC-demo/services/ecommerce/src/apps/account/grpc/protobuf/: user_pb2.py
Introduccion-a-gRPC-con-Python/gRPC-demo/services/ecommerce/src/apps/ecommerce/: admin.py  apps.py  models.py  serializers.py  views.py
Introduccion-a-gRPC-con-Python/gRPC-demo/services/ecommerce/src/apps/ecommerce/grpc/: serializers.py  services.py
Introduccion-a-gRPC-con-Python/gRPC-demo/services/ecommerce/src/apps/ecommerce/grpc/.proto/: ecommerce__product.proto
Introduccion-a-gRPC-con-Python/gRPC-demo/services/ecommerce/src/apps/ecommerce/grpc/protobuf/: ecommerce__product_pb2.py  ecommerce__product_pb2_grpc.py
Introduccion-a-gRPC-con-Python/gRPC-demo/services/ecommerce/src/apps/ecommerce/migrations/: 0001_initial.py
Introduccion-a-gRPC-con-Python/gRPC-demo/services/ecommerce/src/core/: grpc_handlers.py  settings.py  urls.py
secretos-y-estrategias-loggin-django/: loggin_example.py
(+34 files in other folders)
